<resources>
    <string name="app_name">Smart Energy System</string>
    <string name="solar_battery">Solar Battery</string>
    <string name="piezo_battery">Piezo Battery</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="servo_control">Servo Control</string>
    <string name="protection_mode">Protection Mode</string>
    <string name="daily_energy">Daily Energy Production</string>
    <string name="charging">Charging</string>
    <string name="not_charging">Not Charging</string>
    <string name="solar_energy">Solar Energy</string>
    <string name="piezo_energy">Piezo Energy</string>
    <string name="efficiency">Efficiency</string>
    <string name="voltage">Voltage</string>
    <string name="connection_status">Connection Status</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="servo_angle">Servo Angle: %d°</string>
    <string name="temp_value">%1$.1f°C</string>
    <string name="humidity_value">%1$.0f%%</string>
    <string name="voltage_value">%1$.2fV</string>
    <string name="energy_value">%1$.1f Wh</string>
</resources>